# distroless-experiments

./: README.md
python3-alpine/: Dockerfile
python3-example/: Dockerfile  hello.py
python3-gunicorn/: Dockerfile  pyproject.toml
python3-gunicorn/app/: main.py  routes.py
python3-ml/: Dockerfile  pyproject.toml
python3-ml/app/: main.py
python3-slim-uv/: Dockerfile  pyproject copy.toml  pyproject.toml
python3-slim-uv/app/: catboost-example.py  catboost-scoring.py  hello.py
python3-test/: Dockerfile  app.py  run.py
