[tool.poetry]
name = "distroless-ml-poetry"
version = "0.1.0"
description = ""
authors = ["test <test@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
fastapi = "^0.110.0"
gunicorn = "^21.2.0"
uvicorn = "^0.28.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"