[project]
name = "python3-slim-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.6",
    "onnxruntime>=1.19.2",
    "pandas>=2.2.2",
    "ruff>=0.6.4",
    "scikit-learn>=1.5.1",
    "setuptools>=74.1.2",
    "skl2onnx>=1.17.0",
]
